@@ -81,12 +81,12 @@ public record CursoredPageRecord<T>
      boolean firstPage, boolean lastPage) {
         this(content, cursors, totalElements, pageRequest,
                 lastPage ? null : PageRequest.afterCursor(
-                        cursors.getLast(),
+                        cursors.get(cursors.size() - 1),
                         pageRequest.page() + 1,
                         pageRequest.size(),
                         pageRequest.requestTotal()),
                 firstPage ? null : PageRequest.beforeCursor(
-                        cursors.getFirst(),
+                        cursors.get(0),
                         pageRequest.page() == 1 ? 1 : pageRequest.page() - 1,
                         pageRequest.size(),
                         pageRequest.requestTotal()));
